fix naming add ressource paths

--- a/index.html
+++ b/index.html
@@ -3,29 +3,19 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>PlateEditor</title>
-	<link href="dist/ui-styles.css" rel="stylesheet" type="text/css">
-	<link href="dist/editor-styles.css" rel="stylesheet" type="text/css">
-	<link href="dist/shared-styles.css" rel="stylesheet" type="text/css">
+	<link href="resources/dist/ui-styles.css" rel="stylesheet" type="text/css">
+	<link href="resources/dist/editor-styles.css" rel="stylesheet" type="text/css">
+	<link href="resources/dist/shared-styles.css" rel="stylesheet" type="text/css">
 
-	<script type="text/javascript" src="dependencies/papaparse.min.js"></script> <!--// https://www.papaparse.com //-->
-	<script type="text/javascript" src="dependencies/jszip.min.js"></script> <!--// http://stuk.github.io/jszip //-->
+	<script type="text/javascript" src="resources/dependencies/papaparse.min.js"></script> <!--// https://www.papaparse.com //-->
+	<script type="text/javascript" src="resources/dependencies/jszip.min.js"></script> <!--// http://stuk.github.io/jszip //-->
 	
-	<script type="text/javascript" src="dist/ui.min.js"></script>
-	<script type="text/javascript" src="dist/shared.min.js"></script>
-	<script type="text/javascript" src="dist/editor.min.js"></script>
+	<script type="text/javascript" src="resources/dist/ui.min.js"></script>
+	<script type="text/javascript" src="resources/dist/shared.min.js"></script>
+	<script type="text/javascript" src="resources/dist/editor.min.js"></script>
 	
 	<script type="text/javascript">
 		window.onload = function() {Editor.init()}
-	</script>
-	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6J2GQ2TKJJ"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'G-6J2GQ2TKJJ');
 	</script>
 
 </head>
